--- a/main.css
+++ b/main.css
@@ -13,6 +13,11 @@ body {
 .links {
     color: inherit;
     text-decoration: none;
+    position: absolute;
+    top:  0;
+    left:  0;
+    width: 100%;
+    height: 100%;
 }
 
 #circuitsList {
