--- a/main.css
+++ b/main.css
@@ -2,12 +2,13 @@ body {
     font-family: "Inter var", ui-sans-serif, system-ui, -apple-system, system-ui, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
-#header {
+header {
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: space-between;
     flex-wrap: nowrap;
+    align-items: center;
+    text-align: center;
 }
 
 .links {
